--- a/styles.css
+++ b/styles.css
@@ -453,7 +453,7 @@ hr {
   color: var(--color-very-dark-green);
 }
 
-.get-more-done-header h2 {
+h2 {
   font-size: 2.5rem;
   font-weight: 500;
 }
@@ -503,4 +503,33 @@ hr {
 .get-more-paragraph {
   text-align: center;
   font-size: var(--font-md);
+}
+
+.reliable-apps {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: var(--gap-xlg);
+  color: var(--color-very-dark-green);
+}
+
+.reliable-apps-photos {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: var(--gap-sm);
+}
+
+@media (max-width: 768px) {
+  .reliable-apps-photos {
+    grid-template-columns: 1fr;
+  }
+}
+
+.reliable-apps-photos figure {
+  display: flex;
+  flex-direction: column;
+  gap: var(--gap-sm);
+  align-items: center;
+  justify-content: center;
 }
