--- a/styles.css
+++ b/styles.css
@@ -533,3 +533,72 @@ h2 {
   align-items: center;
   justify-content: center;
 }
+
+.picture {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: var(--padding-md);
+}
+
+.picture img {
+  width: 100%;
+  height: 85vh;
+  object-fit: cover;
+  border-radius: var(--radius-sm);
+}
+
+.software-class-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: var(--gap-xxlg);
+  color: var(--color-very-dark-green);
+}
+
+.sofware-class-header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: var(--gap-xsm);
+}
+
+.sofware-class-header p {
+  text-align: center;
+}
+
+.software-sclases {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: var(--gap-lg);
+}
+
+@media (max-width: 768px) {
+  .software-sclases {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: var(--gap-lg);
+  }
+}
+
+.software-sclases figure img:hover {
+  transform: translateY(5px);
+  transition: transform 0.5s linear;
+}
+
+.software-sclases figure {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: var(--gap-sm);
+}
+
+.sofw .oftware-sclases figure p {
+  text-align: center;
+}
