--- a/styles.css
+++ b/styles.css
@@ -341,7 +341,7 @@ h1 span {
   width: 160px;
   height: 50px;
   background-color: var(--color-dark-green);
-  border-radius: var(--radius-md);
+  border-radius: var(--radius-xlg);
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -601,4 +601,26 @@ h2 {
 
 .sofw .oftware-sclases figure p {
   text-align: center;
+}
+
+.download-section {
+  background-image: url("./images/she.jpeg");
+  background-size: cover;
+  width: 100%;
+  height: 65vh;
+  background-repeat: no-repeat;
+  border-radius: var(--radius-md);
+  padding: var(--padding-xxl);
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  align-items: start;
+  gap: var(--gap-md);
+  color: var(--color-white);
+}
+
+@media (max-width: 768px) {
+  .download-section h2 {
+    font-size: 2rem;
+  }
 }
