--- a/styles.css
+++ b/styles.css
@@ -624,3 +624,38 @@ h2 {
     font-size: 2rem;
   }
 }
+
+.footer {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+  padding: var(--padding-xxl);
+  gap: 150px;
+  background-color: #cbc9c965;
+}
+footer nav {
+  display: flex;
+  flex-direction: column;
+  gap: var(--gap-md);
+}
+
+.footer div {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  gap: 20vw;
+}
+
+footer ul {
+  list-style: none;
+}
+
+.etran {
+  gap: 16vw;
+}
+
+footer a:hover {
+  color: #5d5d5d;
+}
